--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@ tests/**/*.xml filter=lfs diff=lfs merge=lfs -text
 tests/**/*.pdb filter=lfs diff=lfs merge=lfs -text
 tests/**/*.xtc filter=lfs diff=lfs merge=lfs -text
 tests/**/*.tar* filter=lfs diff=lfs merge=lfs -text
+tests/**/*.tsv filter=lfs diff=lfs merge=lfs -text
