--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,12 +27,26 @@ include = ["*"]  # ["*"] by default
 exclude = ["examples.tetramer","examples.trimer"] 
 namespaces = false 
 
+[tool.setuptools.package-data]
+"contact_analysis" = ["../external/getcontacts/*.py"]
+
 [project.scripts]
 process-output = "chacra.scripts.process_hremd_output:main"
 chacra-project = "chacra.scripts.project_setup:main"
 run-femto = "chacra.scripts.run_femto_hremd:main"
 run-hremd = "chacra.scripts.run_hremd:main"
 get-state-contacts = "chacra.scripts.get_state_contacts:main"
+
+get-contact-bridges = "contact_analysis.scripts:get_contact_bridges"
+get-contact-fingerprints = "contact_analysis.scripts:get_contact_fingerprints"
+get-contact-flare = "contact_analysis.scripts:get_contact_flare"
+get-contact-frequencies = "contact_analysis.scripts:get_contact_frequencies"
+get-contact-singleframe = "contact_analysis.scripts:get_contact_singleframe"
+get-contact-ticc = "contact_analysis.scripts:get_contact_ticc"
+get-contact-trace = "contact_analysis.scripts:get_contact_trace"
+get-dynamic-contacts = "contact_analysis.scripts:get_dynamic_contacts"
+get-resilabels = "contact_analysis.scripts:get_resilabels"
+get-static-contacts = "contact_analysis.scripts:get_static_contacts"
 
 [tool.ruff]
 # Match Black's default line length
