--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ namespaces = false
 process-output = "chacra.scripts.process_hremd_output:main"
 chacra-project = "chacra.scripts.project_setup:main"
 run-hremd = "chacra.scripts.run_hremd:main"
+run-femto = "chacra.scripts.run_femto_hremd:main"
 get-state-contacts = "chacra.scripts.get_state_contacts:main"
 
 get-contact-bridges = "contact_analysis.scripts:get_contact_bridges"
