--- a/environment.yaml
+++ b/environment.yaml
@@ -5,6 +5,7 @@ channels:
 
 dependencies:
   - femto
+  - python>=3.10,<3.12
   - openmm=8.1.2 
   - mpi=1.0=openmpi
   - openmpi>=4.1         
@@ -29,7 +30,9 @@ dependencies:
   - networkx
   - nglview
   - pre-commit
-  - vmd-python
+  # most likely later versions of vmd-python 
+  # or python>3.11 are causing the memory allocation error with get_dynamic_contacts.py
+  - vmd-python=3.1.4
   - prolif
   
     
