--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,5 @@ tests/**/*.pdb filter=lfs diff=lfs merge=lfs -text
 tests/**/*.xtc filter=lfs diff=lfs merge=lfs -text
 tests/**/*.tar* filter=lfs diff=lfs merge=lfs -text
 tests/**/*.tsv filter=lfs diff=lfs merge=lfs -text
+
+*.ipynb linguist-documentation
